k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictac
  namespace: tictac
  labels:
    app: game
spec:
  selector:
    matchLabels:
      app: game
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: tictac
        image: ghcr.io/devops-raja/tic_tac_app_devsecops:a5f3fd52eaf5a6af64d8b8f86f3dc822901cf60d-28155782931 
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.5"
            memory: "250Mi"
          limits:
            cpu: "0.75"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 80
          name: tictac
      restartPolicy: Always
      imagePullSecrets:
      - name: ghcr-secret # need to create  a k8 secret for image pulling from private ghcr
      

      ##steps: 
      # create a namespace "tictac" in k8 cluster
      # install argo cd in the cluster and config the app
      # creata a secret in k8 cluster in tictac ns
