k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictac
  namespace: tictac
spec:
  selector:
    app: game
  type: ClusterIP
  ports:
  - name: tictac
    protocol: TCP
    port: 80
    targetPort: 80
---
